# gamba-trainer

./: .gitignore  README.md  package-lock.json
esp/combine_esp2/: partitions.csv  sdkconfig  sdkconfig.old  test.html
esp/combine_esp2/components/i2cdev/: i2cdev.c
esp/combine_esp2/components/icm42670/: icm42670.c
esp/combine_esp2/main/: CMakeLists.txt  audio_provider.cc  buttonApp.c  buttonApp.h  gatts_table_creat_demo.c  gatts_table_creat_demo.h  main_functions.cc  mfcc.c  mfcc.h
web/backend_model_conversion/: Pipfile  README.md  main.py
web/backend_model_conversion/templates/: ArduinoExample-v5.txt
web/gamba_trainer/: .gitignore  package-lock.json  package.json  server.js  svelte.config.js  webpack.config.js
web/gamba_trainer/src/: eventBus.js  index.html  main.js  version.js
web/gamba_trainer/src/Application/FUI/: FUIChoose.svelte  FUIConnect.svelte  FUIExperience.svelte  FUIExplanation.svelte
web/gamba_trainer/src/Application/MASK/: MASKChoose.svelte  MASKConnect.svelte  MASKExperience.svelte
web/gamba_trainer/src/Application/MOLE/: MOLEChoose.svelte  MOLEConnect.svelte  MOLEExperience.svelte
web/gamba_trainer/src/Application/common/: AppMain.svelte  AppMainNav.svelte
web/gamba_trainer/src/Trainer/store/: store.js
web/gamba_trainer/src/common/: Description.svelte  Header.svelte  SubBanner.svelte  footer.svelte
web/gamba_trainer/src/components/: App.svelte
web/gamba_trainer/src/general/: CheckboxInput.svelte  DropDown.svelte  Logo.svelte
web/gamba_trainer/src/scss/: _fonts.scss  _layout.scss  _reset.scss  _text.scss  _vars.scss  main.scss
(+295 files in other folders)
